# pgexporter

./: AUTHORS  CMakeLists.txt
.github/workflows/: ci.yml
contrib/extensions/: pg_stat_statements.yaml
contrib/yaml/: postgresql-14.yaml  postgresql-16.yaml
doc/manual/: dev-04-building.md
doc/manual/en/: 97-acknowledgement.md
src/: CMakeLists.txt  cli.c  main.c
src/include/: art.h  http.h  json.h  pgexporter.h  query_alts.h  query_alts_ext.h  utils.h
src/libpgexporter/: art.c  bridge.c  configuration.c  extension.c  http.c  json.c  json_configuration.c  message.c  prometheus.c  prometheus_client.c  queries.c  query_alts.c  query_alts_ext.c  security.c  utils.c  yaml_configuration.c
test/: CMakeLists.txt  pgexporter_test.c  runner.c  testsuite.sh  tsclient.c
test/include/: tsclient.h
test/libpgexportertest/: tscommon.c
test/testcases/: pgexporter_test_1.c  pgexporter_test_2.c  pgexporter_test_3.c  test_art.c  test_configuration.c
